# HomeLibrary

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
api/routers/: books.py
auth/: google_auth.py  login_manager.py  routes.py
crud/: book.py
database/: config.py  database.py
exceptions/: exceptions.py
migrations/: env.py
migrations/versions/: 05cecdd56be1_.py
models/: __init__.py  book.py  user.py
schemas/: book.py
static/: index.html
templates/: profile.html
utils/: database.py
