[project]
name = "homelibrary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-marshmallow>=1.4.0",
    "marshmallow-sqlalchemy>=1.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "authlib>=1.3.0",
    "flask-login>=0.6.3",
    "requests>=2.31.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E501"]  # line too long
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py
"tests/**/*.py" = ["B011"]  # ignore assert False in tests

[tool.ruff.lint.isort]
known-first-party = ["homelibrary"]
known-third-party = ["fastapi", "sqlalchemy", "alembic"]

